
New features:
....IJ.... [ZBXNEXT-1889] made startup.sh and shutdown.sh scripts for Java gateway work in /bin/sh (asaveljevs)
.D........ [ZBX-7597] added description of the returned value types to the agentd manpage (Richlv)
A.F....... [ZBX-1357] updated Brazilian Portuguese, Italian, Japanese, Persian, Slovak and Ukrainian translations; thanks to Zabbix translators (Richlv)

Bug fixes:
.......PS. [ZBX-4675] added error checks to avoid partial configuration loading (dimir)
.D........ [ZBX-6542] added additional information in the default server configuration file about HousekeepingFrequency parameter (Sasha)
...G...... [ZBX-7856] added workaround for Windows _wstat64() not working with symlinks (wiper)
..F....... [ZBX-8030] fixed {HOSTNAME} macro resolving (Eduard)
...G....S. [ZBX-7046] fixed get_ip_by_socket returning an empty string for IPv4 addresses when Zabbix is compiled with IPv6 support (Juris)
..F....... [ZBX-7966] fixed possibility to copy a templated graph (Ivo)
..F....... [ZBX-7930] improved execution time in Maintenance page (Ivo)
..F.....S. [ZBX-7872] removed discovery item prototype from calculation of required performace (NVPS) (igors)
..F.....S. [ZBX-5778] removed counting items in queue if host is in maintenance with no data collection (igors)
A......... [ZBX-6151] fixed graph prototype and trigger prototype validation so item prototypes are no longer allowed from multiple discovery rules and fixed filter by flags not overriding in item.get method (Ivo)
........S. [ZBX-5804] added overflow/wrapping detection to calculated items (Juris)
........S. [ZBX-7659] fixed handling of hosts without any interfaces (Juris)
....IJ.... [ZBX-5379] added stale PID file detection for Java gateway (asaveljevs)
....IJ.... [ZBX-5558] fixed Java gateway error messages not being shown in the console on startup (asaveljevs)
...G...PS. [ZBX-6731] faster processing of log files by agent on Unix (Andris)